--- a/hw3/socketio/index.html
+++ b/hw3/socketio/index.html
@@ -70,16 +70,16 @@
       var form = document.getElementById("form");
       var input = document.getElementById("input");
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
+      form.addEventListener("submit", (event) => {
+        event.preventDefault();
         if (input.value) {
           socket.emit("chat message", input.value);
           input.value = "";
         }
       });
 
-      socket.on("chat message", function (msg) {
-        var item = document.createElement("li");
+      socket.on("chat message", (msg) => {
+        let item = document.createElement("li");
         item.textContent = msg;
         messages.appendChild(item);
         window.scrollTo(0, document.body.scrollHeight);
